--- a/albumselector/src/main/res/values/strings.xml
+++ b/albumselector/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AlbumSelector</string>
+
+    <string name="submitButton">确定</string>
+    <string name="cancelButton">取消</string>
 </resources>
